# website

./: .dockerignore  .editorconfig  .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  fmbq website layout.txt  rules xml definition.txt  sqlite.db
.do/: app.yaml
.github/: dependabot.yml
.github/actions/run-komodo-action/: action.yml
.github/workflows/: ci.yml
crates/poem-htmx/: Cargo.toml
crates/poem-htmx/src/: lib.rs  request.rs  responses.rs
deploy/production/: compose.yaml
deploy/testing/: compose.yaml
migrations/: 20230924_initial_schema.sql  20240412_articles.sql  20240728_people.sql  20240729_registration.sql  20240908_history.sql  20240915_user_info.sql  20250322_data_insert.sql  20250323_data_season.sql  people.sql  registration.sql
scripts/: add_user.sh  download_js_deps.sh  dump_users.sh
src/: config.rs  main.rs  markdown.rs  session.rs
src/components/: admin_layout.rs  header.rs  layout.rs  mod.rs
src/components/admin/: editor.js  editor.rs  mod.rs  sidebar.rs
src/data/: finals.xml  halloffame.xml  history.xml  markell.xml  material.xml  quotes.xml  quotes2024.xml  rules2021.xml  season.xml
src/db/: mod.rs  users.rs
src/db/articles/: image.rs  mod.rs
src/db/users/: mod.rs  reset_password_token.rs
src/domain/: articles.rs  auth.rs  finals.rs  hall_of_fame.rs  markell.rs  material.rs  mod.rs  quotes.rs  rules.rs  seasons.rs  user.rs  users.rs
src/pages/: about.rs  contacts.rs  home.rs  login.rs  mod.rs  playground.rs  quotes.rs  resources.rs  rules.rs
src/pages/quotes/: mod.rs  quotes_2024.rs
src/routes/: admin.rs  article_images.rs  articles.rs  images.rs  login.rs  mod.rs  photos.rs  rules.rs  signup.rs
src/scss/: _base.scss  _fonts.scss  _forms.scss  _header.scss  _layout.scss  _login.scss  about.scss  admin.scss  footer.scss  hero.scss  home.scss  index.scss  rules.scss
src/services/: email.rs  mod.rs  pdf_rules.rs
src/services/markdown/: mod.rs
src/util/: date_serialization.rs  mod.rs
src/web/: htmx.rs  login_context.rs  mod.rs  session.rs  sse.rs
src/web/components/: cards.rs  (+12 more)
(+91 files in other folders)
