[package]
name = "fmbq-website"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5"
dotenv = "0.15"
env_logger = "0.9"
flume = "0.10.14"
log = "0.4"
maud = "0.25"
once_cell = "1"
pulldown-cmark = "0.9"
regex = "1"
serde_json = "1"
sha1 = "0.10"

[dependencies.grass]
version = "0.13"
no-default-features = true
features = ["macro"]

[dependencies.poem]
version = "1.3"
features = ["static-files"]

[dependencies.poem-openapi]
version = "3.0"
features = ["redoc", "time"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
features = ["sqlite", "runtime-tokio-rustls"]

[dependencies.time]
version = "0.3"
features = ["formatting", "serde-well-known"]

[dependencies.tokio]
version = "1.18.5"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["sync"]
