[package]
name = "fmbq-website"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4.34"
dashmap = "5.5"
dotenv = "0.15"
env_logger = "0.9"
flume = "0.10.14"
log = "0.4"
maud = "0.25"
once_cell = "1"
password-auth = "1"
pulldown-cmark = "0.9"
regex = "1"
serde_json = "1"
sha1 = "0.10"
thiserror = "1"

[dependencies.grass]
version = "0.13"
no-default-features = true
features = ["macro"]

[dependencies.poem]
version = "1.3"
features = ["redis-session", "session", "static-files"]

[dependencies.poem-openapi]
version = "3.0"
features = ["redoc", "time"]

[dependencies.redis]
version = "0.23"
features = ["tokio-rustls-comp"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.7"
features = ["chrono", "migrate", "sqlite", "runtime-tokio-rustls"]

[dependencies.time]
version = "0.3"
features = ["formatting", "serde-well-known"]

[dependencies.tokio]
version = "1.32"
features = ["rt-multi-thread", "macros", "signal", "sync"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["sync"]

[dependencies.uuid]
version = "1.4"
features = ["v4"]
